[fix] overflowの原因を解消

--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -1,5 +1,4 @@
 .root {
-  width: 100vw;
   display: grid;
   grid-template-columns: 50% 50%;
 }
