--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,13 +1,10 @@
 .header {
-  width: 100vw;
   height: 3em;
   padding-left: 2em;
   display: flex;
   align-items: center;
   background-color: rgb(20, 20, 20);
   color: rgba(255, 255, 255, 0.6);
-  top: 0;
-  left: 0;
 }
 
 .header:hover {
